# insar-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP-datos-abiertos.md  showcase.html
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: smoke.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: sbas.rs
crates/core/examples/: decompose_coseismic.rs  exposure_abm.rs  gapfill_kriging.rs  landslide_smelt.rs  regression_kriging.rs  robustness_dropout.rs  synthetic_stack.rs  validate_fernandina.rs  validate_fernandina_isce.rs  validate_maule.rs  validate_maule_audited.rs
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/atmosphere/: mod.rs
crates/core/src/decompose/: mod.rs
crates/core/src/features/: mod.rs
crates/core/src/inversion/: mod.rs
crates/core/src/io/: mod.rs
crates/core/src/io/isce/: mod.rs
crates/core/src/network/: mod.rs
crates/core/src/pipeline/: mod.rs
crates/core/src/postprocess/: mod.rs
crates/core/src/ps/: mod.rs
crates/core/src/troposphere/: era5.rs  mod.rs
crates/core/src/unwrap/: mod.rs  snaphu.rs
crates/core/src/unwrap_error/: mod.rs
crates/core/tests/: pipeline_e2e.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/src/: lib.rs
crates/python/tests/: test_bindings.py
docs/: auditoria-2026-07-02.md  benchmarks.md  chile_case.md  validation.md
docs/algarrobo/: informe_algarrobo_el_canelo.md
validation/: SLC_STACK_WORKFLOW.md  aria_add_dem.py  aria_coseismic.py  aria_to_stack.py  build_html.py  compare.py  download_algarrobo.py  download_atacama.py  download_bursts_algarrobo.py  download_maule.py  download_maule_summer.py  era5_correction.py  export_ifgstack.py  hyp3_algarrobo.py  hyp3_stack.py  hyp3_to_los.py  isce_unwrap.py  make_figures.py  make_figures_chile.py  run_algarrobo.sh  run_topsstack.sh  showcase.tmpl.html
