[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/python"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Francisco Parra"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/franciscoparrao/insar-rs"
description = "InSAR time-series analysis engine in Rust (PS-InSAR + SBAS)"
keywords = ["insar", "sar", "deformation", "geospatial", "remote-sensing"]
categories = ["science::geo"]

[workspace.dependencies]
# núcleo numérico (versiones alineadas con surtgis-core)
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.33"
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# errores / serialización
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# parser XML read-only (para .vrt de ISCE) — sin deps transitivas
roxmltree = "0.20"

# I/O raster: GeoTIFF nativo puro Rust (sin GDAL) + helpers de rasters complejos
# path para desarrollo local; version para `cargo publish` (requiere surtgis-core
# publicado en crates.io — ver CHANGELOG y auditoría C-1).
surtgis-core = { version = "0.17", path = "../surtgis/crates/core", default-features = false, features = ["parallel", "complex"] }

# crates internos
insar-core = { path = "crates/core" }
