[package]
name = "insar-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "insar"
path = "src/main.rs"

[dependencies]
insar-core.workspace = true
clap.workspace = true
anyhow.workspace = true
# GeoTransform::default() en decompose/features/deramp (read_velocity/
# read_series sobrescriben la georreferencia real desde el archivo); máscara
# de --ref-region en run/isce.
surtgis-core.workspace = true
ndarray.workspace = true
