[package]
name = "insar-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
rayon.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
surtgis-core.workspace = true
roxmltree.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sbas"
harness = false
