[package]
name = "insar-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
# Los examples usan crates hermanos (geostat/smelt/swarm) que cargo strippea
# al publicar (dev-deps sin version): se excluyen del paquete publicado.
exclude = ["examples/"]

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
rayon.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
surtgis-core.workspace = true
roxmltree.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# Relleno de huecos por kriging (acoplamiento suelto: solo para ejemplos).
geostat-core = { path = "../../../geostat-rs/crates/geostat-core" }
# ML nativo (clasificación/regresión + CV espacial + conformal) para ejemplos.
smelt-ml = { path = "../../../smelt" }
# Modelado basado en agentes (ABM) para el ejemplo de exposición/impacto.
swarm-abm = { path = "../../../swarm-abm/crates/swarm-abm" }

[[bench]]
name = "sbas"
harness = false
